--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vercel/speed-insights": "^1.1.0",
     "classnames": "^2.5.1",
     "next": "^16.1.2",
+    "next-intl": "^4.7.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
