feat: add waiting list functionality and enhance site metadata
- Introduced a waiting list modal for user sign-ups, integrated with a webhook for submissions.
- Updated environment variables for production URL and webhook configuration.
- Enhanced site metadata for improved SEO and multilingual support.
- Added JSON-LD structured data for better search engine visibility.
- Implemented new components for number ticker animations and improved UI interactions.
- Updated translations for waiting list features in English and French.
- Added favicon generation script and new icons for better branding.

This commit enhances user engagement and optimizes the site's performance and SEO capabilities.

--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@
 
 # Site URL (required for sitemap and OG images)
 # Set this to your production URL
-NEXT_PUBLIC_SITE_URL=https://standards.dev
+NEXT_PUBLIC_SITE_URL=https://emailoverflow.ai
 
 # Analytics (optional - auto-configured on Vercel)
 # VERCEL_ANALYTICS_ID=
+
+NEXT_PUBLIC_WAITLIST_WEBHOOK_URL="https://n8n.andyoucreate.com/webhook/c242e9bf-e4a8-4417-8ab9-f844922e59d7"
