feat(waitlist): separate webhooks for count and submission
- Add NEXT_PUBLIC_WAITLIST_COUNT_WEBHOOK_URL for GET requests
- Keep NEXT_PUBLIC_WAITLIST_WEBHOOK_URL for POST submissions
- Display waiting count only in success state
- Add debug logs for webhook fetch

--- a/.env
+++ b/.env
@@ -9,4 +9,6 @@ NEXT_PUBLIC_SITE_URL=https://emailoverflow.ai
 # Analytics (optional - auto-configured on Vercel)
 # VERCEL_ANALYTICS_ID=
 
+# Waiting list webhooks
 NEXT_PUBLIC_WAITLIST_WEBHOOK_URL="https://n8n.andyoucreate.com/webhook/c242e9bf-e4a8-4417-8ab9-f844922e59d7"
+NEXT_PUBLIC_WAITLIST_COUNT_WEBHOOK_URL="https://n8n.andyoucreate.com/webhook/54b9cabd-9499-4452-8f5b-ff645981d1a9"
